# fhe-lib

./: Anchor.toml  app-keypair.json
programs/app/: Cargo.toml
programs/app/src/: lib.rs
programs/fhe-lib/: Cargo.toml
programs/fhe-lib/src/: lib.rs
programs/fhe-lib/src/utils/: fhe_types.rs  internals.rs
tests/: fhe-lib.ts
